[fix] signout button alignment also, used formatter on statements.html

--- a/develop/credit/credit/src/main/resources/static/styles.css
+++ b/develop/credit/credit/src/main/resources/static/styles.css
@@ -54,17 +54,20 @@ nav ul {
     margin: 0;
     display: flex;
     align-items: center;
+    width: 100%;
 }
 
 nav ul li {
     padding: 10px;
     border-right: 1px solid #c1dbff;
-    
+    display: flex;
+    align-items: center;
+
 }
 
 nav ul li:hover {
     cursor: pointer;
-    
+
 }
 
 nav ul li a {
@@ -73,12 +76,15 @@ nav ul li a {
 }
 
 nav ul li#sign-out-button {
+    display: flex;
+    float: right;
+    align-self: center;
     background-color: #025dbf;
     color: #ffffff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    padding: 10px;
+    margin-left: auto;
 }
 
 .page {
@@ -107,7 +113,9 @@ table {
     margin-right: auto;
 }
 
-table, th, td {
+table,
+th,
+td {
     border: 1px solid #dddddd;
     padding: 8px;
 }
@@ -136,7 +144,8 @@ label {
     margin-bottom: 5px;
 }
 
-input, button {
+input,
+button {
     margin-bottom: 10px;
     padding: 8px;
     border: 1px solid #ccc;
@@ -160,6 +169,7 @@ button:hover {
     padding: 10px;
     text-align: left;
 }
+
 hr {
     width: 800px;
     border-color: #000000;
